--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 	<h1>Belajar HTML Tag Iframe Pada HTML | Zaim Alkholis</h1>	
-	<iframe src="https://github.com/zaimalkholis0606" height="500px" width="1000px"></iframe>
+	<iframe src="https://zaimalkholis0606.github.io/zaimalkholis066.github.io/" height="500px" width="1000px"></iframe>
 </body>
 </html>
